# ouroboros

./: .gitignore  CLAUDE.md  README.md  ouroboros.yaml  pyproject.toml
.ouroboros/benchmarks/: core_001_fix_ruff.yaml  core_002_add_docstring.yaml  core_003_reduce_complexity.yaml
docs/plans/: 2026-04-02-ouroboros-phase1.md  2026-04-03-phase1.5-plan.md  2026-04-03-phase3-meta-learning-plan.md
docs/specs/: 2026-03-31-ouroboros-design.md  2026-04-03-phase1.5-design.md  2026-04-03-phase3-meta-learning-design.md
ouroboros/: __init__.py  __main__.py  cli.py  config.py  loop.py  types.py
ouroboros/agents/: base.py  evaluator.py  implementer.py  observer.py  strategist.py
ouroboros/history/: dashboard.py  ledger.py
ouroboros/meta/: agent.py  benchmark_gen.py  prompt_store.py  tournament.py
ouroboros/sandbox/: executor.py  rollback.py  worktree.py
ouroboros/scoreboard/: code_quality.py  correctness.py  efficiency.py  invariants.py  real_world.py  regression.py  runner.py  tool_selection.py
ouroboros/telemetry/: reader.py  types.py  writer.py
ouroboros/traces/: analyzer.py  collector.py  store.py
tests/ouroboros/: test_agents_base.py  test_agents_evaluator.py  test_agents_implementer.py  test_agents_observer.py  test_agents_strategist.py  test_base_agent.py  test_benchmark_gen.py  test_cli.py  test_config.py  test_cost_tracking.py  test_dashboard.py  test_implementer_validation.py  test_integration.py  test_invariants.py  test_ledger.py  test_loop.py  test_loop_helpers.py  test_meta_agent.py  test_prompt_store.py  test_sandbox_executor.py  test_tournament.py  (+13 more)
(+1 files in other folders)
