[project]
name = "ouroboros"
version = "0.1.0"
description = "Self-improving agent engine for claw-code"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.49.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.10",
    "ruff>=0.4",
    "radon>=6.0",
    "pytest>=8.0",
]

[project.scripts]
ouroboros = "ouroboros.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = ["--import-mode=importlib"]

[tool.mypy]
strict = true
python_version = "3.11"

[tool.ruff]
target-version = "py311"
